--- a/ajg-technical-interview/ajg-technical-interview.csproj
+++ b/ajg-technical-interview/ajg-technical-interview.csproj
@@ -24,6 +24,15 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ajg-technical-interview.Domain\ajg-technical-interview.Domain.csproj" />
+    <ProjectReference Include="..\ajg-technical-interview.Services\ajg-technical-interview.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
