--- a/ajg-technical-interview/ClientApp/package.json
+++ b/ajg-technical-interview/ClientApp/package.json
@@ -12,27 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
-    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@angular/animations": "^8.2.12",
+    "@angular/common": "^8.2.12",
+    "@angular/compiler": "^8.2.12",
+    "@angular/core": "^8.2.12",
+    "@angular/forms": "^8.2.12",
+    "@angular/platform-browser": "^8.2.12",
+    "@angular/platform-browser-dynamic": "^8.2.12",
+    "@angular/platform-server": "^8.2.12",
+    "@angular/router": "^8.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
-    "node-sass": "^5.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
-    "protractor": "~5.4.2",
     "rxjs": "^6.6.3",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
@@ -44,13 +41,13 @@
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "~12.11.6",
     "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.10.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "3.5.3"
   },
   "optionalDependencies": {
