--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /ajg-technical-interview/obj
+/ajg-technical-interview/ClientApp/node_modules
+/ajg-technical-interview/bin/Debug/netcoreapp3.1
+/.vs/VSWorkspaceState.json
+/.vs/ajg-technical-interview/v16/.suo
+/.vs/EngineerTechInterview1/v16/.suo
+/.vs/slnx.sqlite
+/.vs/ajg-technical-interview/config/applicationhost.config
+/.vs/ajg-technical-interview/DesignTimeBuild/.dtbcache.v2
