--- a/ajg-technical-interview/ClientAppV2/angular.json
+++ b/ajg-technical-interview/ClientAppV2/angular.json
@@ -150,6 +150,7 @@
     "schematicCollections": [
       "@cypress/schematic",
       "@schematics/angular"
-    ]
+    ],
+    "analytics": false
   }
 }
