--- a/ajg-technical-interview/ClientApp/package.json
+++ b/ajg-technical-interview/ClientApp/package.json
@@ -21,23 +21,20 @@
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@ngrx/store": "8.6.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
-    "node-sass": "^5.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
-    "protractor": "~5.4.2",
     "rxjs": "^6.6.3",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.29",
+    "@angular-devkit/build-angular": "~0.803.26",
+    "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.4.4",
