--- a/ajg-technical-interview/ClientApp/package.json
+++ b/ajg-technical-interview/ClientApp/package.json
@@ -31,6 +31,7 @@
     "primeicons": "^6.0.1",
     "primeng": "^16.6.0",
     "rxjs": "^6.6.3",
+    "ts-mockito": "^2.6.1",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
