--- a/ajg-technical-interview/ajg-technical-interview.csproj
+++ b/ajg-technical-interview/ajg-technical-interview.csproj
@@ -14,7 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.32" />
+    <PackageReference Include="OneOf" Version="3.0.263" />
   </ItemGroup>
 
   <ItemGroup>
