--- a/ajg-technical-interview/ajg-technical-interview.csproj
+++ b/ajg-technical-interview/ajg-technical-interview.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.32" />
     <PackageReference Include="OneOf" Version="3.0.263" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
